tests/correctness/resources/miniboxing/tests/compile/mb_spire_8.check
newSource1.scala:6: error: Following the miniboxing transformation, this method will no longer be in tailcall position (please see https://github.com/miniboxing/miniboxing-plugin/issues/181 for a workaround):
  @tailrec final def euclid2(a: A, b: A): A = a match {
                     ^
[Now checking: minibox-inject]